--- a/index.html
+++ b/index.html
@@ -4,14 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-</head>
+</head><title>My Resume</title>
 <body>
-    <h1>Uros's Portfolio</h1>
-    <h2>I'm a Web Developer</h2>
+    <h2>Uros Arnovljevic</h2>
+    <div class="profile section"><img src="../Desktop/417253199_734784488580075_89404743141237283981_n.jpg" height="200"></div>
+    <p>I have embarked on a career in web development with a passion for creating innovative and functional web applications. I am driven to craft elegant solutions and continuously learn new technologies to enhance my skills and contribute to the development of the digital world.</p>
     <hr />
-    <a href="/assets/images/movie-ranking.png"><h3>Movie ranking project</h3></a> 
+    <h3>Education:</h3>
+    <p>Gymnasium in Bela Crkva 2011-2015</p>
+    <p>Faculty of Dentistry 2015-</p>
+    <h3>Work experience</h3>
+    <p>Currently, I do not have prior work experience in web development. However, I am enthusiastic about entering the field and have recently started building my skills through self-learning and hands-on projects. I am eager to apply my passion for web development and contribute to innovative projects.</p>
+    <h3>Skills</h3><ul> 
+        <li>Well-organized</li>
+        <li>Team Player</li>
+        <li>Creative and innovative</li>
+        <li>Eager to learn</li>
+    </ul>
+    <h3>Other</h3>
+    <a href="./Web development projects/4.3 HTML Porfolio Project/public/contact.html">Contact me</a>
+    <footer><p>© 2024 Uros Arnovljevic. All rights reserved</p></footer>
 
-    <a href="/assets/images/birthday-invite.png"><h3>My birthday party</h3></a>
-    <a href="/public/about.html">About me</a> <a href="public/contact.html">Contact me</a>
 </body>
 </html>
